<resources>
    <string name="app_name">TestORM</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_demo">Add demo row</string>
    <string name="hint_profile_name">Profile Name</string>
    <string name="hint_profile_description">Profile Description</string>
    <string name="hint_profile_url">URL</string>
    <string name="hint_profile_apikey">API Key</string>
    <string name="hint_profile_secret">API Secret</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_activity_title_new_pet">Add Profile</string>
    <string name="editor_activity_title_edit_pet">Edit Profile</string>
</resources>
